# expecto-botronum

./: .coveragerc  .gitignore  .pylintrc  Cargo.toml  LICENSE  README.md  base.py  chatlog.py  config-example.json  config-example.py  config.py  conversation.py  core.py  data.py  games.py  joinphrase.py  log-schema.sql  logsearch.py  module_template.py  ps.py  requirements.txt  test.sh  translations.py  v3.md
.github/workflows/: linux-CI.yml  test.yml  windows-CI.yml
benches/: benchmarks.rs
modules/: admin.py  automod.py  base.py  conversation.py  games.py  houses.py  joinphrase.py  logsearch.py  module_template.py  sampleteams.py  superhero.py
modules/private/: README.md
scripts/: build.sh  test.sh
src/: chatlog_tools.rs  lib.rs
tests/: dummies.py  test_chatlog.py  test_core.py
tests/modules/: test_admin.py  test_base.py  test_conversation.py  test_games.py  test_houses.py  test_joinphrase.py  test_logsearch.py  test_superhero.py
