[package]
name = "expecto-botronum"
version = "0.1.0"
authors = ["Annika <annika0uwu@gmail.com>"]
edition = "2018"

[lib]
name = "chatlogger"
crate-type = ["cdylib"]

[dependencies]
rusqlite = "0.24.0"
chrono = "0.4.19"
html-escape = "0.2.6"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]
